--- a/browser/scss/editor/main.scss
+++ b/browser/scss/editor/main.scss
@@ -65,7 +65,6 @@ $swatch-side: $left-width / 10;
   width: 80vw;
   height: 100%;
   background-color: #ffffff;
-  overflow: auto;
   transform-origin: 0 0;
   background-size: 15px 15px;
   background-image: linear-gradient(to right, #ceeade 1px, transparent 1px), linear-gradient(to bottom, #ceeade 1px, transparent 1px);
