--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -14,7 +14,7 @@ $cool:#3ACF91;
 
 body {
   background: #fdfdfd;
-  overflow:hidden;
+  /*overflow:hidden;*/
 }
 
 @mixin clearfix {
@@ -37,7 +37,6 @@ body {
 	padding: 0;
   height:100%;
   width:100%;
-  overflow:scroll;
 }
 
 .btn-cool {
